fixed z-index boxes

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,11 +9,11 @@ html, body {
     font-style: normal;
     font-size: 14px;
     background-color: #010101;
-    color: #CBBFA2;
+    color: #ffe6ab;
 }
 
 a, .btn {
-    color: #CBBFA2;
+    color: #ffe6ab;
 }
 
 .btn#hamburgerToggle, .btn#menuClose {
@@ -23,6 +23,7 @@ a, .btn {
 main {
     flex: 1;
     padding-top: 100px; /* ruimte onder absolute menu */
+    z-index: 1;
 }
 
 .px-5 {
@@ -223,7 +224,7 @@ footer {
     color: #fff;
     margin-top: -150px;
     margin-bottom: 17px;
-    z-index: 3;
+    z-index: 2;
     position: relative;
 }
 
@@ -269,6 +270,10 @@ footer {
 
 .hidden {
     display: none;
+}
+
+.btn-color{
+    color: white !important;
 }
 
 @media (max-width: 768px) {
